maze.lessons.maze.wallfollower.WallFollowerMaze.scala.error
Escaper:1: error: Missing closing brace `}' assumed here
def keepHandOnSideWall = {gauche(); if (estFaceMur()) {droite();avance()} else {avance()}
^Escaper:1: error: expected class or object definition
def keepHandOnSideWall = {gauche(); if (estFaceMur()) {droite();avance()} else {avance()}
^